# TetraDevHacks2025

./: README.md
esp-32/: 1.ino  2.ino
tkinter-demo/: README.md  constants.py  pyproject.toml
tkinter-demo/src/tkinter_demo/: receiver.py  transmitter.py
